--- a/.github/workflows/presubmit-workflow.yml
+++ b/.github/workflows/presubmit-workflow.yml
@@ -18,10 +18,18 @@ jobs:
         run: npm ci
 
       - name: Check if presubmit
+        id: presubmit
         uses: ./.github/actions/presubmit
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           is_presubmit: ${{ contains(github.event.pull_request.labels.*.name, '$-presubmit') }}
+
+      - name: Cancel if not presubmit
+        uses: styfle/cancel-workflow-action@0.9.1
+        if: ${{ steps.presubmit.outputs.isPresubmit == 'false' }}
+        with:
+          workflow_id: ${{ github.event.workflow.id }}
+          access_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run a staging build of site
         run: npm run build
