--- a/.github/workflows/presubmit-workflow.yml
+++ b/.github/workflows/presubmit-workflow.yml
@@ -25,11 +25,8 @@ jobs:
           is_presubmit: ${{ contains(github.event.pull_request.labels.*.name, '$-presubmit') }}
 
       - name: Cancel if not presubmit
-        uses: styfle/cancel-workflow-action@0.9.1
+        uses: andymckay/cancel-action@0.2
         if: ${{ steps.presubmit.outputs.isPresubmit == 'false' }}
-        with:
-          workflow_id: ${{ github.event.workflow.id }}
-          access_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run a staging build of site
         run: npm run build
