--- a/.github/workflows/presubmit-workflow.yml
+++ b/.github/workflows/presubmit-workflow.yml
@@ -24,11 +24,8 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           is_presubmit: ${{ contains(github.event.pull_request.labels.*.name, '$-presubmit') }}
 
-      - name: Cancel if not presubmit
-        uses: andymckay/cancel-action@0.2
-        if: ${{ steps.presubmit.outputs.isPresubmit == 'false' }}
-
       - name: Run a staging build of site
+        if: ${{ steps.presubmit.outputs.isPresubmit == 'false' }}
         run: npm run build
         env:
           ELEVENTY_ENV: staging
@@ -40,6 +37,7 @@ jobs:
       # This will return true if there's a markdown file that was changed
       # in the PR.
       - uses: dorny/paths-filter@v2.2.1
+        if: ${{ steps.presubmit.outputs.isPresubmit == 'false' }}
         id: filter
         with:
           filters: |
@@ -59,11 +57,11 @@ jobs:
       # Only run tests if the PR touches behavior related files.
 
       - name: Test
-        if: ${{ steps.filter.outputs.js == 'true' || steps.filter.outputs.json == 'true' || steps.filter.outputs.yml == 'true' || steps.filter.outputs.njk == 'true'}}
+        if: ${{ steps.presubmit.outputs.isPresubmit == 'false' && (steps.filter.outputs.js == 'true' || steps.filter.outputs.json == 'true' || steps.filter.outputs.yml == 'true' || steps.filter.outputs.njk == 'true') }}
         run: npm run test
 
       - name: Lighthouse CI
-        if: ${{ steps.filter.outputs.js == 'true' || steps.filter.outputs.packageJson == 'true' || steps.filter.outputs.njk == 'true' || steps.filter.outputs.scss == 'true'}}
+        if: ${{ steps.presubmit.outputs.isPresubmit == 'false' && (steps.filter.outputs.js == 'true' || steps.filter.outputs.packageJson == 'true' || steps.filter.outputs.njk == 'true' || steps.filter.outputs.scss == 'true') }}
         env:
           LHCI_SERVER: ${{ secrets.LHCI_SERVER }}
           LHCI_TOKEN: ${{ secrets.LHCI_TOKEN }}
