--- a/.github/workflows/presubmit-workflow.yml
+++ b/.github/workflows/presubmit-workflow.yml
@@ -25,7 +25,7 @@ jobs:
           is_presubmit: ${{ contains(github.event.pull_request.labels.*.name, '$-presubmit') }}
 
       - name: Run a staging build of site
-        if: ${{ steps.presubmit.outputs.isPresubmit == 'false' }}
+        if: ${{ steps.presubmit.outputs.isPresubmit == 'true' }}
         run: npm run build
         env:
           ELEVENTY_ENV: staging
@@ -37,7 +37,7 @@ jobs:
       # This will return true if there's a markdown file that was changed
       # in the PR.
       - uses: dorny/paths-filter@v2.2.1
-        if: ${{ steps.presubmit.outputs.isPresubmit == 'false' }}
+        if: ${{ steps.presubmit.outputs.isPresubmit == 'true' }}
         id: filter
         with:
           filters: |
@@ -57,11 +57,11 @@ jobs:
       # Only run tests if the PR touches behavior related files.
 
       - name: Test
-        if: ${{ steps.presubmit.outputs.isPresubmit == 'false' && (steps.filter.outputs.js == 'true' || steps.filter.outputs.json == 'true' || steps.filter.outputs.yml == 'true' || steps.filter.outputs.njk == 'true') }}
+        if: ${{ steps.presubmit.outputs.isPresubmit == 'true' && (steps.filter.outputs.js == 'true' || steps.filter.outputs.json == 'true' || steps.filter.outputs.yml == 'true' || steps.filter.outputs.njk == 'true') }}
         run: npm run test
 
       - name: Lighthouse CI
-        if: ${{ steps.presubmit.outputs.isPresubmit == 'false' && (steps.filter.outputs.js == 'true' || steps.filter.outputs.packageJson == 'true' || steps.filter.outputs.njk == 'true' || steps.filter.outputs.scss == 'true') }}
+        if: ${{ steps.presubmit.outputs.isPresubmit == 'true' && (steps.filter.outputs.js == 'true' || steps.filter.outputs.packageJson == 'true' || steps.filter.outputs.njk == 'true' || steps.filter.outputs.scss == 'true') }}
         env:
           LHCI_SERVER: ${{ secrets.LHCI_SERVER }}
           LHCI_TOKEN: ${{ secrets.LHCI_TOKEN }}
