--- a/.github/workflows/presubmit-workflow.yml
+++ b/.github/workflows/presubmit-workflow.yml
@@ -1,7 +1,7 @@
 name: Presubmit
 on:
   pull_request:
-    types: [labeled,opened,reopened,synchronize]
+    types: [labeled]
 jobs:
   presubmit:
     runs-on: ubuntu-latest
@@ -16,13 +16,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
-      - name: Check if presubmit
-        id: presubmit
-        uses: ./.github/actions/presubmit
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          is_presubmit: ${{ contains(github.event.pull_request.labels.*.name, '$-presubmit') }}
 
       - name: Run a staging build of site
         if: ${{ steps.presubmit.outputs.isPresubmit == 'true' }}
