--- a/.github/workflows/check-if-presubmit-workflow.yml
+++ b/.github/workflows/check-if-presubmit-workflow.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     types: [labeled,opened,reopened,synchronize]
 jobs:
-  presubmit:
+  check_if_presubmit:
     runs-on: ubuntu-latest
     name:
     steps:
